# ticktick-mcp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-09-ticktick-feature-expansion-design.md  2026-03-09-ticktick-feature-expansion.md
productivity_mcp/: server.py
productivity_mcp/providers/ticktick/: __init__.py  auth.py  client.py  oauth_server.py  schemas.py
productivity_mcp/providers/ticktick/tools/: auth_tools.py  bulk.py  projects.py  tasks.py
tests/providers/ticktick/: test_schemas.py
tests/providers/ticktick/tools/: test_bulk.py  test_projects.py  test_tasks.py
ticktick_mcp/: auth.py  client.py  config.py  server.py
ticktick_mcp/tools/: auth_tools.py  projects.py  tasks.py
